--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "mongoose": "^5.9.21",
     "mongoose-findorcreate": "^3.0.0",
     "morgan": "~1.9.1",
-    "uuid": "latest"
+    "uuid": "latest",
+    "node-fetch": "latest"
   },
   "devDependencies": {
     "cloudinary": "^1.22.0",
