connect frontend and backend for food picture features

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
-CLOUDINARY_URL="cloudinary://668424627147621:MGQQL2VUwhHPVCSQ1nVnUss6z6w@dhz3wp5gg"
+CLOUDINARY_URL=cloudinary://668424627147621:MGQQL2VUwhHPVCSQ1nVnUss6z6w@dhz3wp5gg
 OAUTH_CLIENT_ID="101412984186-djnfu42luui7n3r5aerk361qe99a54sl.apps.googleusercontent.com"
 OAUTH_CLIENT_SECRET="NWFt8-v0zBrTeNkv1SJzzXqM"
 COOKIE_KEY='35241'
 ATLAS_URL="mongodb+srv://smartcook_436:SCook-436@smartcook436.sln0r.mongodb.net/dev?retryWrites=true&w=majority"
+
+
