--- a/backend/package.json
+++ b/backend/package.json
@@ -19,11 +19,11 @@
     "mongoose": "^5.9.21",
     "mongoose-findorcreate": "^3.0.0",
     "morgan": "~1.9.1",
+    "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "uuid": "latest",
-    "uuidv4": "^6.1.1",
-    "node-fetch": "latest"
+    "uuidv4": "^6.1.1"
   },
   "devDependencies": {
     "cloudinary": "^1.22.0",
