--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
