--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "uuid": "^8.2.0"
+    "uuid": "^8.2.0",
+    "uuidv4": "^6.1.0"
   },
   "devDependencies": {
     "cloudinary": "^1.22.0",
