--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,17 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-elastic-carousel": "^0.6.4",
     "react-icons": "^3.10.0",
+    "react-material-ui-carousel": "^1.6.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.9.0",
+    "react-toastify": "^6.0.8",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
