--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.6.4",
     "react-icons": "^3.10.0",
+    "react-js-pagination": "^3.0.3",
     "react-material-ui-carousel": "^1.6.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
@@ -23,6 +24,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "simple-react-pagination-js": "^1.1.3",
     "styled-components": "^5.1.1"
   },
   "scripts": {
