Refactored project structure for deployment

--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "smartcook",
-  "version": "1.0.0",
-  "description": "",
-  "main": "js.js",
+  "name": "backend",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "cd frontend && npm start",
-    "backend": "cd backend && nodemon bin/www",
-    "dev": "concurrently \"npm run backend\" \"npm run client\"  "
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alyabouzaid/CPSC436iAssignment1.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/alyabouzaid/CPSC436iAssignment1/issues"
-  },
-  "homepage": "https://github.com/alyabouzaid/CPSC436iAssignment1#readme",
   "dependencies": {
     "axios": "^0.19.2",
-    "concurrently": "^5.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.19",
-    "morgan": "^1.10.0"
-  }
+    "body-parser": "^1.19.0",
+    "cookie-parser": "~1.4.4",
+    "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
+    "express": "~4.16.1",
+    "express-form-data": "^2.0.13",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "mongoose": "^5.9.21",
+    "mongoose-findorcreate": "^3.0.0",
+    "morgan": "~1.9.1",
+    "node-fetch": "^2.6.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "uuid": "^8.2.0",
+    "uuidv4": "^6.1.0",
+    "cloudinary": "^1.22.0"
+  },
+  "devDependencies": {}
 }
