--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.6.4",
@@ -58,5 +59,6 @@
     "html-react-parser": "^0.13.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^6.0.8"
-  }
+  },
+  "proxy": "http://localhost:9000"
 }
