--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.22.0",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
@@ -26,8 +27,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "uuid": "^8.2.0",
-    "uuidv4": "^6.1.0",
-    "cloudinary": "^1.22.0"
+    "uuidv4": "^6.1.0"
   },
   "devDependencies": {}
 }
