--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "react": "^16.13.1",
     "react-announcement": "^1.1.2",
+    "react-announcement-bar": "0.0.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
     "react-elastic-carousel": "^0.6.4",
