--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^6.0.8",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "simple-react-pagination-js": "^1.1.3",
     "styled-components": "^5.1.1"
